tests/paczka1/fuzzy1/11014993.err
Error in line 1: ei4Ii S385 91,1
Error in line 5: K5fFN A887 32,6
Error in line 13: K5fFN A887 18,5
Error in line 3: HwsiAtxWsz S385 20,5
Error in line 19: ei4Ii A887 70,6
Error in line 25: K5fFN A887 77,3
Error in line 22: HwsiAtxWsz A103 9,0
